--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         	<a href="index.html">
                     			<div class="css-logo rounded">
                    					<div class="css-logo-text">
-                        				<strong>G</strong><i class="fa fa-heart"></i><strong>D</strong>
+                        				<strong>V</strong><i class="fa fa-heart"></i><strong>P</strong>
                     				</div>
                     			</div>
                        		</a>
@@ -418,8 +418,8 @@
                         <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
                         	<div class="arrow-left"></div>
                             <div class="story-date">
-                            	<div class="date-only">23</div>
-                                <div class="month-year">03.12</div>
+                            	<div class="date-only">९</div>
+                                <div class="month-year">८.१०</div>
                            </div>
                            <div class="arrow-right"></div>
                            <div class="clearboth"></div>                          
@@ -429,7 +429,7 @@
                         	<h3>पहिली भेट</h3>
                             <p>कॉलेजचे पहिले प्रैक्टिकल.<br/>
 								कॉलेजातल्या छान दिसणाऱ्या आणि हुशार भासणाऱ्या मुली सोबत बसायला मिळणार या आशेने दिल गार्डन गार्डन हो गाया था.
-								ती वेळ येताच क्षणी, मी आधीच लॅब जाऊन बसलो.<br/>
+								ती वेळ येताच क्षणी, मी आधीच लॅबमध्ये जाऊन बसलो.<br/>
 								१० मिनिटे वाट पाहताना गार्डनमध्यल्या मनमोहक फुलांच्या सुगंधावर
 								स्वच्छंद भुंग्या प्रमाणे फिरत असतानाच दुरून आलेल्या मोजांच्या घाणेरड्या वासाने भुंगा मेला आणि 
 								आवाज आला "हि माझी जागा आहे" असा म्हणून तिची मैत्रीण तिच्या बाजूच्या जागेवर उभी होती.<br/>
@@ -478,8 +478,8 @@
                         <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
                         	<div class="arrow-left"></div>
                             <div class="story-date">
-                            	<div class="date-only">19</div>
-                                <div class="month-year">06.12</div>
+                            	<div class="date-only">१३</div>
+                                <div class="month-year">९.१४</div>
                            </div>
                            <div class="arrow-right"></div>
                            <div class="clearboth"></div>                          
@@ -537,7 +537,7 @@
                         	<div class="arrow-left"></div>
                             <div class="story-date">
                             	<div class="date-only">४</div>
-                                <div class="month-year">१०.१५</div>
+                                <div class="month-year">१०.१४</div>
                            </div>
                            <div class="arrow-right"></div>
                            <div class="clearboth"></div>                          
@@ -603,7 +603,7 @@
                         <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
                         	<h3>साखरपुडा</h3>
                             <p>
-							"पोस्ट ग्रेजुएट होशील तर चांगली मुलगी मिळेल लग्नाला." असं म्हणत आईने माझी समजुत काढली आणि  मला पुढे शिकायला लावले.
+							"पोस्ट ग्रेजुएट होशील तर लग्नाला चांगली मुलगी मिळेल." असं म्हणत आईने माझी समजुत काढली आणि  मला पुढे शिकायला लावले.
 							ते आज या क्षणाला हि अगंठी तिच्या बोटात घालाताना आठवले.<br/>
 							"जितम् जितम् जितम्, जितीमितेव्या !!!". असे माझं आनंदाने ओरडत होते पण मी शांतपणे स्मितहास्य करत हा क्षण अनुभवत होतो. 
 							</p>                            
