--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
      	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-     	<meta name="description" content="FOREVER - Responsive HTML Wedding Template">
-      	<meta name="author" content="www.dethemes.com">
-        <META NAME="ROBOTS" CONTENT="NOINDEX">
+     	<meta name="description" content="">
+      	<meta name="author" content="">
+        <META NAME="ROBOTS" CONTENT="">
       	<title>लग्नपत्रिका</title>
         
         <link rel="icon" href="images/favicon.jpg">
@@ -137,7 +137,7 @@
                         		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
 					 				
                                     <div id="invited">
-                                    	|| ॐ श्री गणेशाय नमः ||
+                                    	||ॐ श्री गणेशाय नमः||
                                     </div>
                                     <div class="banner-text withlove medium light">
                                     	<h1>|| कुर्यात सदा मंगलम् ||</h1>
