--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
 									
                                     <div id="invited">
-                                    ||ॐ श्री गणेशाय नमः||
+                                    	|| कुर्यात सदा मंगलम् ||
                                     </div>
                                     <div class="banner-text withlove medium light">
                                     	<h1>|| कुर्यात सदा मंगलम् ||</h1>
